log
Thu 23 Mar 2023 02:19:46 PM UTC: 
 tests:  0|6
total_score: 0/70
968f38d
Thu 23 Mar 2023 02:35:11 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:11: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   44 |     Node *aux =list->current;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
ed9dec8
Thu 23 Mar 2023 02:35:50 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
faf5ec3
Thu 23 Mar 2023 02:40:53 PM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
312c804
Thu 23 Mar 2023 02:46:14 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
b0e7a5f
Thu 23 Mar 2023 02:47:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:5:9: error: macro names must be identifiers
    5 | #define (list->current)->data CURRENT_DATA
      |         ^
list.c: In function ‘firstList’:
list.c:48:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   48 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:55:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   55 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c: In function ‘lastList’:
list.c:60:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   60 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c: In function ‘prevList’:
list.c:65:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   65 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
list.c: In function ‘lastList’:
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
list.c: In function ‘prevList’:
list.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
417b391
Thu 23 Mar 2023 02:47:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
647a8e3
Thu 23 Mar 2023 02:48:17 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d999926
Thu 23 Mar 2023 02:49:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:27: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
   48 |     return (list->current).data ;
      |                           ^
      |                           ->
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e4ef93
Thu 23 Mar 2023 03:20:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
50e526a
Thu 23 Mar 2023 03:21:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0687ff6
Thu 23 Mar 2023 03:22:30 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0c6a28f
Thu 23 Mar 2023 03:24:11 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
46f3f89
Thu 23 Mar 2023 03:28:03 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
2516571
Thu 23 Mar 2023 03:30:09 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
864a4b1
Thu 23 Mar 2023 03:31:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
677a15f
Thu 23 Mar 2023 03:36:46 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e9ed9f9
Thu 23 Mar 2023 03:38:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
842c205
Thu 23 Mar 2023 03:39:51 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
0943a20
Thu 23 Mar 2023 03:40:43 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
b3af671
Thu 23 Mar 2023 03:50:26 PM UTC: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|0
7c305e8
Thu 23 Mar 2023 03:50:50 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7829621
Thu 23 Mar 2023 03:51:11 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0d98635
Thu 23 Mar 2023 03:53:19 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fd47606
Thu 23 Mar 2023 03:54:26 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
c34754b
Thu 23 Mar 2023 03:56:41 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
04dd18f
Thu 23 Mar 2023 03:57:35 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
8829ece
Thu 23 Mar 2023 03:58:28 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:119:6: error: expected expression before ‘/’ token
  119 |     */
      |      ^
Compilation failed
c9c89d3
Thu 23 Mar 2023 04:02:49 PM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
69437b9
Thu 23 Mar 2023 04:08:48 PM UTC: 
 list.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
6d6ea7b
Thu 23 Mar 2023 04:24:18 PM UTC: 
 list.c | 29 +++++++++--------------------
 1 file changed, 9 insertions(+), 20 deletions(-)
In file included from test.c:5:
test.c: In function ‘pushCurrent’:
list.c:119:16: error: ‘newNode’ is used uninitialized [-Werror=uninitialized]
  119 |   newNode->prev=prev;
      |   ~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
7ecdd38
Thu 23 Mar 2023 04:24:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8151427
Thu 23 Mar 2023 04:25:55 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
326152f
